--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,33 @@
 	font-weight: 600;
 	margin-right: 3px;
 }
+.header {
+	width: 100%;
+	height: 90px;
+	background-color: white;
+	padding: 20px 80px;
+	box-shadow: 0px 1px 5px lightgray;
+}
+.header h1 {
+	font-size: 26px;
+}
+
+.nav-bar {
+	display: flex;
+	justify-content: space-between;
+	align-items: end;
+	width: 100%;
+	height: 90px;
+	padding: 0px 95px;
+}
+.nav-bar input {
+	height: 50px;
+	width: 400px;
+	border: none;
+	border-radius: 5px;
+	box-shadow: 1px 1px 5px lightgray;
+	color: hsl(0, 0%, 52%);
+	padding: 10px 30px;
+	font-weight: 600;
+	outline: none;
+}
