--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,9 @@
 	overflow: hidden;
 	box-shadow: 1px 1px 6px hsl(0, 0%, 88%);
 }
+.country:hover {
+	box-shadow: 2px 10px 20px darkgray;
+}
 .flag {
 	box-shadow: 0px 0px 6px hsl(0, 0%, 88%);
 }
@@ -94,4 +97,48 @@
 	padding: 10px 30px;
 	font-weight: 600;
 	outline: none;
+}
+.relative {
+	position: relative;
+}
+.open {
+	height: 50px;
+	width: 200px;
+	border: none;
+	border-radius: 5px;
+	box-shadow: 1px 1px 5px lightgray;
+	color: hsl(0, 0%, 52%);
+	padding: 10px 20px;
+	font-weight: 600;
+	outline: none;
+	background-color: white;
+	text-wrap: nowrap;
+	text-align: start;
+}
+.absolute {
+	position: absolute;
+	top: calc(100% + 10px);
+	box-shadow: 1px 1px 5px lightgray;
+	color: hsl(0, 0%, 52%);
+}
+.region-links {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: flex-start;
+	background-color: white;
+	border-radius: 10px;
+	height: 200px;
+	width: 200px;
+	padding-left: 15px;
+}
+.region-links button {
+	border: none;
+	background-color: white;
+	color: hsl(0, 0%, 52%);
+	font-weight: 600;
+}
+
+.relative button:hover {
+	font-weight: 800;
 }
