--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
 	font-family: 'Nunito Sans', sans-serif;
 	color: hsl(200, 15%, 8%);
 }
+a {
+	text-decoration: none;
+}
 .home {
 	min-height: 100vh;
 	display: flex;
@@ -103,7 +106,7 @@
 }
 .open {
 	height: 50px;
-	width: 200px;
+	width: 250px;
 	border: none;
 	border-radius: 5px;
 	box-shadow: 1px 1px 5px lightgray;
@@ -128,8 +131,8 @@
 	align-items: flex-start;
 	background-color: white;
 	border-radius: 10px;
-	height: 200px;
-	width: 200px;
+	height: 250px;
+	width: 235px;
 	padding-left: 15px;
 }
 .region-links button {
@@ -141,4 +144,69 @@
 
 .relative button:hover {
 	font-weight: 800;
+}
+.detail-content {
+	display: flex;
+	justify-content: space-evenly;
+}
+.detail-flag,
+.detail-info {
+	width: 50%;
+	height: 100%;
+	padding: 50px 130px;
+}
+.detail-flag img {
+	height: 300px;
+	width: 450px;
+	border-radius: 5px;
+	box-shadow: 2px 10px 20px darkgray;
+}
+
+.detail-info {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	gap: 50px;
+}
+.pair {
+	display: flex;
+	justify-content: flex-start;
+}
+.pair dt {
+	font-weight: 600;
+	margin-right: 5px;
+}
+.pair dd {
+	color: hsl(0, 0%, 42%);
+}
+dl {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: space-evenly;
+	gap: 10px;
+}
+.back-home {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	padding-left: 150px;
+	width: 100%;
+	height: 150px;
+}
+.back-home button {
+	background-color: transparent;
+	border: none;
+	border-radius: 5px;
+	box-shadow: 1px 1px 10px 3px lightgray;
+	font-weight: 600;
+	font-size: 14px;
+	color: hsl(0, 0%, 42%);
+	height: 40px;
+	width: 120px;
+}
+.back-home button:hover {
+	box-shadow: 2px 1px 10px 3px darkgray;
 }
