--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ a {
 	justify-content: space-evenly;
 	align-items: center;
 	gap: 40px;
-	padding: 50px;
+	padding: 70px 50px;
 }
 .country {
 	display: flex;
@@ -90,6 +90,14 @@ a {
 	height: 90px;
 	padding: 0px 95px;
 }
+@media screen and (max-width: 900px) {
+	.nav-bar {
+		flex-direction: column;
+		padding: 20px 20px;
+		align-items: center;
+		gap: 15px;
+		}
+}
 .nav-bar input {
 	height: 50px;
 	width: 400px;
@@ -149,12 +157,7 @@ a {
 	display: flex;
 	justify-content: space-evenly;
 }
-.detail-flag,
-.detail-info {
-	width: 50%;
-	height: 100%;
-	padding: 50px 130px;
-}
+
 .detail-flag img {
 	height: 300px;
 	width: 450px;
@@ -162,14 +165,42 @@ a {
 	box-shadow: 2px 10px 20px darkgray;
 }
 
-.detail-info {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: flex-start;
-	flex-wrap: wrap;
-	gap: 50px;
+@media screen and (max-width: 900px) {
+	.detail-content {
+		flex-direction: column;
+		justify-content: start;
+		align-items: center;
+		gap: 0px;
+		}
+	.detail-flag img {
+		height: 200px;
+		width: 300px;
+		}
+	.detail-info {
+		display: flex;
+		flex-direction: column;
+		gap: 15px;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: nowrap;
+	}
+	.back-home {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 50px;
+		width: 100%;
+		height: 50px;
+	}
+	
+	.detail-info {
+		width: 100%;
+		height: 50%;
+		padding: 50px ;
+	}
+	
 }
+
 .pair {
 	display: flex;
 	justify-content: flex-start;
@@ -188,13 +219,30 @@ dl {
 	justify-content: space-evenly;
 	gap: 10px;
 }
-.back-home {
+@media  screen and (min-width: 900px) {
+	
+	.back-home {
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		padding-left: 150px;
+		width: 100%;
+		height: 150px;
+	}
+	.detail-flag,
+.detail-info {
+	width: 50%;
+	height: 100%;
+	padding: 50px 130px;
+}
+.detail-info {
 	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	padding-left: 150px;
-	width: 100%;
-	height: 150px;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	gap: 50px;
+}
 }
 .back-home button {
 	background-color: transparent;
